# MoltRisk

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
CODEX_DOCS/: HLPD.md  TechSpec_DevPlan.md  important.md
backend/: Dockerfile  pyproject.toml
backend/src/app/: __init__.py  main.py  settings.py
backend/src/app/agents/: base.py  heuristic.py  llm_agent.py
backend/src/app/agents/providers/: __init__.py  ollama.py  openai_compat.py
backend/src/app/api/: routes_agents.py  routes_games.py  routes_ws.py
backend/src/app/core/: cards.py  engine.py  events.py  missions.py  rng.py  rules.py  state.py  treaties.py  validation.py
backend/src/app/db/: models.py  repo.py  session.py
backend/src/app/maps/classic/: adjacency.json  continents.json  territories.json
backend/src/app/util/: ids.py  timeouts.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: app.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  types.ts  ws.ts
frontend/src/components/: chat.tsx  log.tsx  map_svg.tsx  player_table.tsx  timer.tsx  treaties.tsx
frontend/src/pages/: game.tsx  home.tsx
